bug fix for #859 css issue with card alignment

--- a/src/reusableComponents/ImageSlider/index.css
+++ b/src/reusableComponents/ImageSlider/index.css
@@ -4,7 +4,8 @@
   justify-content: center;
   margin: 0 auto;
   /* min-height: 300px; */
-  height: 350px;
+  height: 200px;
+  
   /* min-width: 300px; */
   /* max-width: 350px; */
   position: relative;
